--- a/src/webparts/staffCrud/components/StaffCrud.module.scss
+++ b/src/webparts/staffCrud/components/StaffCrud.module.scss
@@ -2,24 +2,87 @@
 
 .spfx-crud {
   background-color: white;
-}
-// .spfx-crud * {
-//   margin: 5px;
-//   padding: 5px;
-// }
-table,
-td,
-th {
-  border: 1px solid #ddd;
-  text-align: left;
-}
-
-table {
-  border-collapse: collapse;
   width: 100%;
 }
-
-th,
-td {
-  padding: 15px;
+.spfx-crud{
+  Button{
+   
+  color: white;
+  font-size: medium;
+  font-weight: bold;
+  width: 90px;
+  background-color: #4CAF50;
+  padding: 14px 20px;
+  margin: 15px ;
+  border: none;
+  border-radius: 4px;
+cursor: pointer;
+&:hover{
+  background-color:  #2a802d;;
 }
+  } 
+}
+
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+label{
+  font-weight: bold;
+}
+.heading{
+  margin: 0;
+  text-align: left;
+  padding-bottom:20px ;
+  padding-left: 10px;
+  padding-top: 10px;
+  background-color: #4CAF50;
+  color: white;
+}
+
+.box{
+  table,
+  td,
+  th {
+    border: 1px solid #ddd;
+    text-align: left;
+  }
+  
+  table { 
+    border-collapse: collapse;
+    width: 100%;
+    
+  }
+  th{background-color: #4CAF50;;
+    color: white;
+  }
+  th,
+  td {
+    padding: 10px;
+    margin: auto;
+    text-align: center;
+   
+  }}
+  td button{
+  color: white;
+  font-size: medium;
+  font-weight: bold;
+  width: 90px;
+  background-color: #4CAF50;
+  padding: 14px 20px;
+  margin: 15px ;
+  border: none;
+  border-radius: 4px;
+cursor: pointer;
+  
+    &:hover{
+      background-color:  #2d8930;;
+    }
+    
+  }
+  
